--- a/assets/style.css
+++ b/assets/style.css
@@ -1,510 +1,1 @@
-@charset "UTF-8";
-
-a {
-    text-decoration: none;
-}
-
-body, html {
-    font-family: "Noto Sans KR", Gulim, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 1.5;
-    background-color: #121214 !important;
-    color: #fff !important;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Noto Sans KR", "Segoe UI", Arial, sans-serif;
-}
-
-.w3-content {
-    max-width: 1400px;
-    margin-top: 90px;
-}
-
-.w3-overlay {
-    background-color: rgba(0, 0, 0, .7);
-}
-
-.w3-animate-opacity-fast {
-    -webkit-animation: opac .4s;
-    animation: opac .4s;
-}
-
-.w3-animate-zoom-fast {
-    -webkit-animation: animatezoom .3s;
-    animation: animatezoom .3s;
-}
-
-.w3-spin-fast {
-    -webkit-animation: w3-spin 0.3s infinite linear;
-    animation: w3-spin 0.3s infinite linear;
-}
-
-.w3-one-spin {
-    -webkit-animation: w3-spin 0.3s linear;
-    animation: w3-spin 0.3s linear;
-}
-
-.w3-hover-light-opacity:hover,
-.w3-light-opacity {
-    opacity: .8;
-}
-
-
-#mainContent {
-  padding: 5px 3px 50px 3px !important;
-}
-
-.gray-hover:hover {
-  color: #fff !important;
-  background-color: #444 !important;
-}
-
-.clipThumbnail img {
-  width: 100%;
-}
-
-.clipThumbnail img:hover {
-  opacity: .7;
-  cursor: pointer;
-}
-
-.clipThumbnail div {
-  background-color: #090909;
-  background-color: rgba(0, 0, 0, .7);
-  color: #fff;
-  padding: 2px 4px !important;
-  position:absolute;
-  left:7px;
-  bottom:7px;
-  font-size:13px;
-}
-
-.clipThumbImg {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#header {
-  background-color: #1d1d1d !important;
-  color: #fff !important;
-  border-bottom: 2px solid #000 !important;
-  transition: ease 400ms;
-}
-
-#headerCenter {
-  max-width: 1370px;
-  margin: auto;
-  background-color: #1d1d1d !important;
-  color: #fff !important;
-}
-
-#header #logo {
-  margin-left: 3px;
-  font-weight: 800;
-  font-size: 19px;
-}
-
-.clipInfo {
-  padding: 8px;
-  color: #fff !important;
-  background-color: #1d1d1d !important;
-}
-
-.clipSubject {
-  font-size: 14px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.clipSubject a:hover {
-  color: #a970ff;
-}
-
-.clipCategory {
-  color: #adadb8;
-  font-size: 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.clipCategory a:hover {
-  color: #a970ff;
-}
-
-.profileImg {
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-#loadingSpinner {
-  display: none;
-	position: absolute;
-	top:50%;
-	left:50%;
-	margin-top:-30px;
-	margin-left:-30px;
-	width: 60px;
-	height: 60px;
-	border: 8px solid rgba(255,255,255,0.15);
-  border-top: 8px solid #e2e2e2;
-	border-radius: 50%;
-	-webkit-animation: spinner 0.7s linear infinite;
-	animation: spinner 0.7s linear infinite;
-}
-
-#bookmarkSpinner {
-	position: absolute;
-	top:130px;
-	left:50%;
-	margin-left:-17px;
-	width: 34px;
-	height: 34px;
-	border: 4px solid rgba(255,255,255,0.15);
-  border-top: 4px solid #e2e2e2;
-	border-radius: 50%;
-	-webkit-animation: spinner 0.7s linear infinite;
-	animation: spinner 0.7s linear infinite;
-}
-
-@-webkit-keyframes spinner {
-	0% { -webkit-transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spinner {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
-}
-
-::-webkit-scrollbar {
-  width: 7px;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background-clip: padding-box;
-  background-color: #35353e;
-  border: 1px solid #3c3c44;
-}
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-}
-.autocomplete-suggestions::-webkit-scrollbar-thumb {
-  background-color: #626273;
-  border: 1px solid #686879;
-}
-
-#settingModal {
-    display:none;
-    position:fixed;
-    top:50%; left:50%;
-    -ms-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    background-color: #373737;
-    padding:10px 18px;
-    border-radius: 5px;
-    z-index: 3;
-    width:310px;
-    height:90%;
-    overflow:auto;
-}
-
-#settingModal::-webkit-scrollbar-thumb {
-  background-color: #101014;
-  border: 1px solid #3c3c46;
-  border-radius: 5px;
-}
-
-.settingModalTitle{
-	border-bottom: 1px solid #a4a4a4;
-    margin:30px 0 15px 0;
-    padding-bottom:5px;
-}
-
-.settingModalTitleRight{
-    float:right;
-}
-
-.settingModalTitleRight a{
-    cursor: pointer;
-    margin-left:8px;
-}
-
-.settingModalTitleRight a:hover{
-    opacity:.6;
-}
-
-#settingModal input{
-  padding: 3px;
-  height: 30px;
-  background: #f4f4f4;
-  border-radius: 5px;
-}
-
-.w3-input:focus,
-.w3-select:focus {
-  outline: 0;
-  border: 1px solid #a692d3;
-  -moz-box-shadow: 0 0 7px 2px #a692d3;
-  -webkit-box-shadow: 0 0 7px 2px #a692d3;
-  box-shadow: 0 0 7px 2px #a692d3;
-}
-
-#settingModal button {
-  padding: 3px;
-  height: 30px;
-  border-radius: 5px;
-}
-
-.searchTerm{
-	box-shadow: 0 3px #747474;
-}
-
-#regBtn{
-  -webkit-tap-highlight-color: transparent;
-  box-shadow: 0 4px #462f7b;
-}
-
-#regBtn:focus{
-	outline:none;
-}
-
-#regBtn:hover{
-	opacity:.9;
-}
-
-#regBtn:active{
-	-webkit-transform: translateY(2px);
-	transform: translateY(2px);
-	box-shadow: 0 2px #462f7b;
-}
-
-.w3-dark-purple, .w3-hover-dark-purple:hover {
-  color: #fff !important;
-  background-color: #6242ad !important;
-}
-
-#closeSettingModal {
-  display: block;
-  position: absolute;
-  right: 6px;
-  top: -3px;
-  text-decoration: none;
-  font-size: 22px;
-  font-weight: 700;
-  color: #5f5f5f;
-  opacity: 1;
-  cursor: pointer;
-}
-
-#closeSettingModal:hover {
-  color: #939393 !important;
-  opacity: .7;
-}
-
-.settingModalFooter{
-	height: 45px;
-	padding:25px 8px 5px 8px;
-	color:#4f4f4f;
-	font-size:10px;
-  text-align:center;
-}
-
-#favList{
-  margin-top: 30px;
-}
-
-.favStreamer{
-  padding:6px 2px 0 6px;
-  margin:5px 0;
-  border:1px solid #4f4f4f;
-  border-radius: 6px;
-}
-
-.favStreamerLeft{
-  display:inline-block;
-  width:89.8888%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  padding-right:10px;
-}
-
-.favStreamerLeft img{
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-right: 7px;
-  margin-bottom: 2px;
-}
-
-.favStreamerLeft a:hover{
-  text-decoration: underline;
-}
-
-.favStreamerRight{
-  display:inline-block;
-  width:8.8888%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  padding-bottom:5px;
-}
-
-.streamerDelBtn {
-  font-size: 19px;
-  font-weight: 700;
-  color: #cfcfcf;
-  opacity: 1;
-  cursor: pointer;
-}
-
-.streamerDelBtn:hover {
-  color: gray !important;
-  opacity: .8;
-}
-
-.favListMessage{
-  text-align: center;
-  margin-top:50px;
-  color:#b6b6b6;
-}
-
-.clipWrapMessage{
-  text-align:center;
-  font-size:17px;
-  margin:30px 10px 10px 10px;
-  color:#b8b8b8;
-}
-
-#idListArea{
-    position:absolute;
-    top:-999px;
-    left:-999px;
-}
-
-.slideDown{
-	animation-name: slideDown;
-	-webkit-animation-name: slideDown;	
-
-	animation-duration: 1s;	
-	-webkit-animation-duration: 1s;
-
-	animation-timing-function: ease;	
-	-webkit-animation-timing-function: ease;	
-}
-
-@keyframes slideDown {
-	0% {
-		transform: translateY(-100%);
-		opacity: 0;
-	}	
-	100% {
-		transform: translateY(0%);
-		opacity: 1;
-	}		
-}
-
-@-webkit-keyframes slideDown {
-	0% {
-		-webkit-transform: translateY(-100%);
-		opacity: 0;
-	}		
-	100% {
-		-webkit-transform: translateY(0%);
-		opacity: 1;
-	}	
-}
-
-.fadeOut{
-	animation-name: fadeOut;
-	-webkit-animation-name: fadeOut;	
-
-	animation-duration: 2s;	
-	-webkit-animation-duration: 2s;
-
-	animation-timing-function: ease;	
-	-webkit-animation-timing-function: ease;
-
-	-webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;		
-}
-
-@keyframes fadeOut {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}	
-}
-
-@-webkit-keyframes fadeOut {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-.fadeOutFast{
-	animation-name: fadeOut;
-	-webkit-animation-name: fadeOut;	
-
-	animation-duration: 0.4s;	
-	-webkit-animation-duration: 0.4s;
-
-	animation-timing-function: ease;	
-	-webkit-animation-timing-function: ease;
-
-	-webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;		
-}
-
-.closeStream {
-  display: block;
-  position: absolute;
-  right: -1px;
-  top: -1px;
-  z-index: 2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 700;
-  color: #646464;
-  opacity: 1;
-  cursor: pointer;
-}
-
-.closeStream:hover {
-  color: #bb0000 !important;
-  opacity: .9;
-}
-
-.closeStream i{
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.Cafe24Dongdong{
-	font-family: Cafe24Dongdong, "Noto Sans KR", Gulim, Arial, sans-serif;
-}
-
-@font-face {
-    font-family: 'Cafe24Dongdong';
-    src: url('//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Dongdong.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+@charset "UTF-8";a{text-decoration:none}body,html{font-family:"Noto Sans KR",Gulim,Arial,sans-serif;font-size:13px;line-height:1.5;background-color:#121214!important;color:#fff!important}h1,h2,h3,h4,h5,h6{font-family:"Noto Sans KR","Segoe UI",Arial,sans-serif}.w3-content{max-width:1400px;margin-top:90px}.w3-overlay{background-color:rgba(0,0,0,.7)}.w3-animate-opacity-fast{-webkit-animation:opac .4s;animation:opac .4s}.w3-animate-zoom-fast{-webkit-animation:animatezoom .3s;animation:animatezoom .3s}.w3-spin-fast{-webkit-animation:w3-spin .3s infinite linear;animation:w3-spin .3s infinite linear}.w3-one-spin{-webkit-animation:w3-spin .3s linear;animation:w3-spin .3s linear}.w3-hover-light-opacity:hover,.w3-light-opacity{opacity:.8}#mainContent{padding:5px 3px 50px 3px!important}.gray-hover:hover{color:#fff!important;background-color:#444!important}.clipThumbnail img{width:100%}.clipThumbnail img:hover{opacity:.7;cursor:pointer}.clipThumbnail div{background-color:#090909;background-color:rgba(0,0,0,.7);color:#fff;padding:2px 4px!important;position:absolute;left:7px;bottom:7px;font-size:13px}.clipThumbImg{position:absolute;top:0;left:0}#header{background-color:#1d1d1d!important;color:#fff!important;border-bottom:2px solid #000!important;transition:ease .4s}#headerCenter{max-width:1370px;margin:auto;background-color:#1d1d1d!important;color:#fff!important}#header #logo{margin-left:3px;font-weight:800;font-size:19px}.clipInfo{padding:8px;color:#fff!important;background-color:#1d1d1d!important}.clipSubject{font-size:14px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.clipSubject a:hover{color:#a970ff}.clipCategory{color:#adadb8;font-size:12px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.clipCategory a:hover{color:#a970ff}.profileImg{width:40px;height:40px;object-fit:cover;border-radius:50%}#loadingSpinner{display:none;position:absolute;top:50%;left:50%;margin-top:-30px;margin-left:-30px;width:60px;height:60px;border:8px solid rgba(255,255,255,.15);border-top:8px solid #e2e2e2;border-radius:50%;-webkit-animation:spinner .7s linear infinite;animation:spinner .7s linear infinite}#bookmarkSpinner{position:absolute;top:130px;left:50%;margin-left:-17px;width:34px;height:34px;border:4px solid rgba(255,255,255,.15);border-top:4px solid #e2e2e2;border-radius:50%;-webkit-animation:spinner .7s linear infinite;animation:spinner .7s linear infinite}@-webkit-keyframes spinner{0%{-webkit-transform:rotate(0)}100%{-webkit-transform:rotate(360deg)}}@keyframes spinner{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}::-webkit-scrollbar{width:7px}::-webkit-scrollbar-thumb{border-radius:3px;background-clip:padding-box;background-color:#35353e;border:1px solid #3c3c44}::-webkit-scrollbar-track{background-color:transparent}::-webkit-scrollbar-button{width:0;height:0}.autocomplete-suggestions::-webkit-scrollbar-thumb{background-color:#626273;border:1px solid #686879}#settingModal{display:none;position:fixed;top:50%;left:50%;-ms-transform:translate(-50%,-50%);-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);background-color:#373737;padding:10px 18px;border-radius:5px;z-index:3;width:310px;height:90%;overflow:auto}#settingModal::-webkit-scrollbar-thumb{background-color:#101014;border:1px solid #3c3c46;border-radius:5px}.settingModalTitle{border-bottom:1px solid #a4a4a4;margin:30px 0 15px 0;padding-bottom:5px}.settingModalTitleRight{float:right}.settingModalTitleRight a{cursor:pointer;margin-left:8px}.settingModalTitleRight a:hover{opacity:.6}#settingModal input{padding:3px;height:30px;background:#f4f4f4;border-radius:5px}.w3-input:focus,.w3-select:focus{outline:0;border:1px solid #a692d3;-moz-box-shadow:0 0 7px 2px #a692d3;-webkit-box-shadow:0 0 7px 2px #a692d3;box-shadow:0 0 7px 2px #a692d3}#settingModal button{padding:3px;height:30px;border-radius:5px}.searchTerm{box-shadow:0 3px #747474}#regBtn{-webkit-tap-highlight-color:transparent;box-shadow:0 4px #462f7b}#regBtn:focus{outline:0}#regBtn:hover{opacity:.9}#regBtn:active{-webkit-transform:translateY(2px);transform:translateY(2px);box-shadow:0 2px #462f7b}.w3-dark-purple,.w3-hover-dark-purple:hover{color:#fff!important;background-color:#6242ad!important}#closeSettingModal{display:block;position:absolute;right:6px;top:-3px;text-decoration:none;font-size:22px;font-weight:700;color:#5f5f5f;opacity:1;cursor:pointer}#closeSettingModal:hover{color:#939393!important;opacity:.7}.settingModalFooter{height:45px;padding:25px 8px 5px 8px;color:#4f4f4f;font-size:10px;text-align:center}#favList{margin-top:30px}.favStreamer{padding:6px 2px 0 6px;margin:5px 0;border:1px solid #4f4f4f;border-radius:6px}.favStreamerLeft{display:inline-block;width:89.8888%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;padding-right:10px}.favStreamerLeft img{width:30px;height:30px;object-fit:cover;border-radius:50%;margin-right:7px;margin-bottom:2px}.favStreamerLeft a:hover{text-decoration:underline}.favStreamerRight{display:inline-block;width:8.8888%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;padding-bottom:5px}.streamerDelBtn{font-size:19px;font-weight:700;color:#cfcfcf;opacity:1;cursor:pointer}.streamerDelBtn:hover{color:gray!important;opacity:.8}.favListMessage{text-align:center;margin-top:50px;color:#b6b6b6}.clipWrapMessage{text-align:center;font-size:17px;margin:30px 10px 10px 10px;color:#b8b8b8}#idListArea{position:absolute;top:-999px;left:-999px}.slideDown{animation-name:slideDown;-webkit-animation-name:slideDown;animation-duration:1s;-webkit-animation-duration:1s;animation-timing-function:ease;-webkit-animation-timing-function:ease}@keyframes slideDown{0%{transform:translateY(-100%);opacity:0}100%{transform:translateY(0);opacity:1}}@-webkit-keyframes slideDown{0%{-webkit-transform:translateY(-100%);opacity:0}100%{-webkit-transform:translateY(0);opacity:1}}.fadeOut{animation-name:fadeOut;-webkit-animation-name:fadeOut;animation-duration:2s;-webkit-animation-duration:2s;animation-timing-function:ease;-webkit-animation-timing-function:ease;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}@keyframes fadeOut{0%{opacity:1}100%{opacity:0}}@-webkit-keyframes fadeOut{0%{opacity:1}100%{opacity:0}}.fadeOutFast{animation-name:fadeOut;-webkit-animation-name:fadeOut;animation-duration:.4s;-webkit-animation-duration:.4s;animation-timing-function:ease;-webkit-animation-timing-function:ease;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}.closeStream{display:block;position:absolute;right:-1px;top:-1px;z-index:2;text-decoration:none;font-size:18px;font-weight:700;color:#646464;opacity:1;cursor:pointer}.closeStream:hover{color:#b00!important;opacity:.9}.closeStream i{position:absolute;right:0;top:0}.Cafe24Dongdong{font-family:Cafe24Dongdong,"Noto Sans KR",Gulim,Arial,sans-serif}@font-face{font-family:Cafe24Dongdong;src:url(//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Dongdong.woff) format('woff');font-weight:400;font-style:normal}
